<resources>
    <string name="app_name">Shareparks</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">•••••••••••</string>
    <string name="logInSignUpMessage">Don\'t have an account yet ?</string>
    <string name="signUpHyperlink"><u>Sign up here</u></string>
    <string name="logInText">Log In</string>
    <string name="nameHint">Johnny</string>
    <string name="lastNameHint">Test</string>
    <string name="signUpText">Sign Up</string>
    <string name="usernameSignUpHint">JohnnySkater148</string>
    <string name="homeIcon">Home</string>
    <string name="locationIcon">Location</string>
    <string name="addCircleIcon">Post</string>
    <string name="marketIcon">Marketplace</string>
    <string name="accountIcon">Account</string>
    <string name="disconnectSession">Disconnect</string>
    <string name="terminateSessionMessage">Are you sure you want to disconnect from Shareparks ?</string>
    <string name="reportBug">Report Bug</string>
    <string name="actionAccountManagement">My Account</string>
    <string name="appSettings">Settings</string>
    <string name="actionOpen">Open</string>
    <string name="actionClose">Close</string>
    <string name="descriptionHint">Write a caption here</string>
    <string name="actionPost">Post</string>
    <string name="actionPicture">Camera</string>
    <string name="likesDefault">0 likes</string>
    <string name="close_session_true">Yes</string>
    <string name="close_session_false">Close</string>
    <string name="cancel">Cancel</string>
    <string name="bugReportHint">Please specify the bug you encountered and where</string>
    <string name="firstNameHint">First Name</string>
    <string name="lastNameHint2">Last Name</string>
    <string name="actionSave">Save</string>
    <string name="passwordWarning">Dont\'t forget your password!</string>
    <string name="personalizedMessage">Here you can put a personalized message when the app opens. Try it out !</string>
    <string name="gandalfQuote">A wizard is never late . . .</string>
    <string name="switchDarkMode">Dark mode</string>
    <string name="switchNotifications">Notifications</string>
    <string name="switchAppTimer">Time management</string>
</resources>