<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="18dp"
    android:layout_marginRight="18dp"
    android:orientation="vertical">

    <ImageView
        android:layout_width="68dp"
        android:layout_height="68dp"
        android:layout_gravity="center"
        android:layout_marginTop="52dp"
        android:layout_marginBottom="12dp"
        android:src="@drawable/ic_person" />

    <EditText
        android:id="@+id/firstNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:hint="@string/firstNameHint"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/lastNameInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:hint="@string/lastNameHint2"
        android:inputType="textPersonName" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/passwordWarning" />

    <EditText
        android:id="@+id/firstPasswordInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:hint="@string/passwordHint"
        android:inputType="textPassword" />

    <View
        android:layout_width="268dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/Pomegranate" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/personalizedMessage"
        android:textAlignment="center" />

    <View
        android:layout_width="268dp"
        android:layout_height="1dp"
        android:layout_gravity="center"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:background="@color/Pomegranate" />

    <EditText
        android:id="@+id/personalizedMessageInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:hint="@string/gandalfQuote"
        android:inputType="text" />

    <Button
        android:id="@+id/saveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="12dp"
        android:text="@string/actionSave" />

</LinearLayout>