<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="32dp"
    android:layout_marginRight="32dp"
    android:orientation="vertical">

    <Switch
        android:id="@+id/darkModeSwitch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="12dp"
        android:drawableLeft="@drawable/ic_nights_mode"
        android:onClick="toggleDarkMode"
        android:text="@string/switchDarkMode"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:drawableLeft="@drawable/ic_notifications"
        android:text="@string/switchNotifications"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Switch
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:drawableLeft="@drawable/ic_timer"
        android:text="@string/switchAppTimer"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

</LinearLayout>